--- a/Arsipku-server/package.json
+++ b/Arsipku-server/package.json
@@ -11,14 +11,18 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-refresh": "^0.14.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
@@ -33,6 +37,7 @@
         "@mui/material": "^5.10.1",
         "@mui/styled-engine": "^5.10.1",
         "@mui/x-data-grid": "^5.15.3",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "universal-cookie": "^4.0.4"
     }
 }
